Classes and styles for evaluation index to fix spacing.

--- a/app/assets/stylesheets/evaluations.css.scss
+++ b/app/assets/stylesheets/evaluations.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Evaluations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+div.evaluation_row {
+  margin-bottom:40px;
+}
+div.evaluation_title {
+  margin-top:5px;
+}
